fixed contrast changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,7 @@ header p {
 }
 
 #navWrapper {
-  background-color: #8C8C8C;
+  background-color: #595959;
 }
 
 nav ul {
@@ -154,7 +154,7 @@ nav ul {
   padding: 0;
 }
 nav ul li.active a {
-  background-color: rgba(89, 89, 89, 0.25);
+  background-color: rgba(140, 140, 140, 0.25);
 }
 nav ul li a {
   display: block;
@@ -162,10 +162,10 @@ nav ul li a {
   font-size: 1.1rem;
   color: #F2F2F2;
   text-decoration: none;
-  border-top: 1px solid rgba(89, 89, 89, 0.2);
+  border-top: 1px solid rgba(140, 140, 140, 0.2);
 }
 nav ul li a:hover {
-  background-color: rgba(89, 89, 89, 0.5);
+  background-color: rgba(140, 140, 140, 0.5);
 }
 nav ul.open {
   display: block;
