--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -36,7 +36,7 @@ header {
     }
 } // end header
 #navWrapper {
-    background-color: #8C8C8C;
+    background-color: #595959;
 }
 nav {
     ul {
@@ -45,7 +45,7 @@ nav {
         padding: 0;
     }
     ul li.active a {
-        background-color: rgba(89, 89, 89, .25);
+        background-color: rgba(140, 140, 140, .25);
     }
     ul li a {
         display: block;
@@ -53,10 +53,10 @@ nav {
         font-size: 1.1rem;
         color: #F2F2F2;
         text-decoration: none;
-        border-top: 1px solid rgba(89, 89, 89, .2)
+        border-top: 1px solid rgba(140, 140, 140, .2)
     }
     ul li a:hover {
-        background-color: rgba(89, 89, 89, .5);
+        background-color: rgba(140, 140, 140, .5);
     }
     ul.open {
         display: block;
